// models/Contact.js
const mongoose = require("mongoose");

const ContactSchema = new mongoose.Schema(
  {
    userId: {
      type: mongoose.Schema.Types.ObjectId,
      ref: "User",
      required: true,
    },
    groupId: {
      type: mongoose.Schema.Types.ObjectId,
      ref: "UserGroup", // Si tienes un modelo de grupo de usuarios
      required: false,
    },
    folderIds: [{
      type: mongoose.Schema.Types.ObjectId,
      ref: 'Folder'
    }],
    name: {
      type: String,
      required: true,
    },
    lastName: {
      type: String,
      required: true,
    },
    role: {
      type: String,
      required: true,
    },
    type: {
      type: String,
      required: true,
    },
    address: {
      type: String,
      required: false,
    },
    state: {
      type: String,
      required: true,
    },
    city: {
      type: String,
      required: true,
    },
    zipCode: {
      type: String,
      required: true,
    },
    email: {
      type: String,
      required: true,
    },
    phone: {
      type: String,
      required: true,
    },
    nationality: {
      type: String,
      required: true,
    },
    document: {
      type: String,
      required: true,
    },
    cuit: {
      type: String,
      required: true,
    },
    status: {
      type: String,
      required: true,
    },
    activity: {
      type: String,
      required: true,
    },
    company: {
      type: String,
      required: true,
    },
    fiscal: {
      type: String,
      required: true,
    },
  },
  { timestamps: true }
);

module.exports = mongoose.model("Contact", ContactSchema);
